--- a/client/index.html
+++ b/client/index.html
@@ -18,8 +18,8 @@
             <nav>
                 <ul class="nav">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Contacts</a></li>
-                    <li><a href="#">Support Us</a></li>
+                    <li><a href="https://www.linkedin.com/in/paola-m-0bb05795">Contacts</a></li>
+                    <li><a class="isDisabled" href="#" >Support Us</a></li>
                 </ul>
             </nav>
         </header>
